# subsidy-clock

./: .gitignore  .project.yml  GOVUK_SKIN_BRIEF.md  README.md  pyproject.toml  reviewed-reports.md  vercel.json
.githooks/: pre-commit  pre-push  setup
.github/ISSUE_TEMPLATE/: correction.yml
.github/workflows/: update.yml
api/: decode.js  sandbox-image.js  sandbox.js
reference/: annual_scheme_costs.yaml  baselines.yaml  basemap.json  cfd_stations.csv  context.yaml  deflators.yaml  electricity_bill.yaml  equivalences.yaml  indirect_annual.yaml  ref_crosscheck.yaml  ref_totals.yaml  ro_stations.csv  station_coords.csv
scratch/: turver-reply-2026-06-17.md
scripts/: inject-mapbox-token.js
site/: about.html  app.js  buy.html  corrections.html  data.html  embed.html  index.html  map.html  map.js  methodology.html  share.html  share.js  skin-ft.css  style.css
site/data/: breakdown.json  bsuos.csv  capacity-market.csv  catalogue.json  cfd-nuclear-biomass.csv  cfd.csv  climate-change-levy.csv  combined-annual.csv  constraints.csv  corrections.csv  corrections.json  emissions-trading.csv  feed-in-tariffs.csv  indirect_crosscheck.json  map.json  meta.json  reconciliation.json  ref_reconciliation.json  renewables-obligation.csv  restatements.csv  timeseries.json  tnuos.csv  totals.json
tests/: test_bsuos.py  test_capacity_market.py  test_cfd.py  test_ckan.py  test_cli.py  test_constraints.py  test_money.py  test_reconcile.py  test_reference.py  test_sharecards.py  test_sitedata.py  test_smoke.py  test_stations.py  test_store.py  test_uk_build.py
(+1321 files in other folders)
