[project]
name = "subsidy-engine"
version = "0.1.0"
description = "Data engine for the UK Subsidy Counter"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/subsidy_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
